fix some bugs in Login feature