@@ -4,8 +4,12 @@ import javafx.application.Platform;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Scene;
-import javafx.scene.control.*;
+import javafx.scene.control.Alert;
+import javafx.scene.control.Button;
+import javafx.scene.control.PasswordField;
+import javafx.scene.control.TextField;
 import javafx.scene.layout.AnchorPane;
+import javafx.scene.layout.Region;
 import javafx.stage.Stage;
 
 import java.io.IOException;
@@ -19,52 +23,88 @@ public class LoginFormController {
     public Button btnCancel;
     public Button btnConnect;
 
-    public LoginFormController() {
-    }
-
     public void initialize() {
         Platform.runLater(() -> {
-            this.txtUsername.requestFocus();
+            txtUsername.requestFocus();
         });
     }
 
     public void btnConnectOnAction(ActionEvent actionEvent) {
-        this.validate();
-
+        validate();
         try {
-            Process mysql = (new ProcessBuilder(new String[]{"mysql", "-h", this.txtHost.getText(), "-u", this.txtUsername.getText(), "--port", this.txtPort.getText(), "-p", "-e", "exit"})).start();
-            mysql.getOutputStream().write(this.txtPassword.getText().getBytes());
+
+            //sometimes the following code gives errors cuz String formatting syntax can be different for each OS
+            /*String command = String.format("mysql -h %s -u %s -p%s --port %s -e exit",
+                    txtHost.getText(),
+                    txtUsername.getText(),
+                    txtPassword.getText(),
+                    txtPort.getText());
+            Process mysql = Runtime.getRuntime().exec(command);*/
+
+
+            //Following 2 ways are better than the previous one
+            /*String[] commands = {"mysql",
+            "-h", txtHost.getText(),
+                    "-u", txtUsername.getText(),
+                    "--port", txtPort.getText(),
+                    "-p"+txtPassword.getText(),
+                    "-e", "exit"
+            };
+            Process mysql = Runtime.getRuntime().exec(commands);*/
+
+            /*Process mysql = new ProcessBuilder("mysql",
+                    "-h", txtHost.getText(),
+                    "-u", txtUsername.getText(),
+                    "--port", txtPort.getText(),
+                    "-p" + txtPassword.getText(),
+                    "-e", "exit").start();*/
+
+            //Remove warning message by supplying password through an output stream
+            Process mysql = new ProcessBuilder("mysql",
+                    "-h", txtHost.getText(),
+                    "-u", txtUsername.getText(),
+                    "--port", txtPort.getText(),
+                    "-p",
+                    "-e", "exit").start();
+
+            mysql.getOutputStream().write(txtPassword.getText().getBytes());
             mysql.getOutputStream().close();
+
             int exitCode = mysql.waitFor();
             if (exitCode != 0) {
                 InputStream errorStream = mysql.getErrorStream();
                 byte[] buffer = new byte[errorStream.available()];
                 errorStream.read(buffer);
                 errorStream.close();
+
                 Alert alert = new Alert(Alert.AlertType.ERROR);
                 alert.setTitle("Connection Failure");
                 alert.setHeaderText("Can't establish the connection");
                 alert.setContentText(new String(buffer));
-                alert.getDialogPane().setMinHeight(-1.0D / 0.0);
+                alert.getDialogPane().setMinHeight(Region.USE_PREF_SIZE);
                 alert.show();
-                this.txtUsername.requestFocus();
-                this.txtUsername.selectAll();
+
+                txtUsername.requestFocus();
+                txtUsername.selectAll();
             } else {
                 System.out.println("Success");
-                FXMLLoader fxmlLoader = new FXMLLoader(this.getClass().getResource("/view/MainForm.fxml"));
-                AnchorPane root = (AnchorPane)fxmlLoader.load();
+                FXMLLoader fxmlLoader = new FXMLLoader(getClass().getResource("/view/MainForm.fxml"));
+                AnchorPane root = fxmlLoader.load();
                 Scene MainScene = new Scene(root);
-                Stage stage = (Stage)this.txtUsername.getScene().getWindow();
+                Stage stage = (Stage) txtUsername.getScene().getWindow();
                 stage.setScene(MainScene);
-                MainFormController controller = (MainFormController)fxmlLoader.getController();
-                controller.initData(this.txtHost.getText(), this.txtPort.getText(), this.txtUsername.getText(), this.txtPassword.getText());
+                MainFormController controller = fxmlLoader.getController();
+                controller.initData(txtHost.getText(),
+                        txtPort.getText(),
+                        txtUsername.getText(),
+                        txtPassword.getText());
                 stage.centerOnScreen();
                 stage.setTitle("MySQL Client Shell");
+                /*((Stage) (txtUsername.getScene().getWindow())).close();*/
             }
-        } catch (InterruptedException | IOException e) {
+        } catch (IOException | InterruptedException e) {
             e.printStackTrace();
         }
-
     }
 
     public void btnCancelOnAction(ActionEvent actionEvent) {
@@ -72,20 +112,20 @@ public class LoginFormController {
     }
 
     private void validate() {
-        if (this.txtHost.getText().trim().isEmpty()) {
-            (new Alert(Alert.AlertType.ERROR, "Host can't be empty", new ButtonType[0])).show();
-            this.txtHost.requestFocus();
-            this.txtHost.selectAll();
-        } else if (!this.txtPort.getText().matches("\\d+")) {
-            (new Alert(Alert.AlertType.ERROR, "Invalid Port", new ButtonType[0])).show();
-            this.txtPort.requestFocus();
-            this.txtPort.selectAll();
-        } else {
-            if (this.txtUsername.getText().trim().isEmpty()) {
-                (new Alert(Alert.AlertType.ERROR, "Username can't be empty", new ButtonType[0])).show();
-                this.txtUsername.requestFocus();
-                this.txtUsername.selectAll();
-            }
+        if (txtHost.getText().trim().isEmpty()) {
+            new Alert(Alert.AlertType.ERROR, "Host can't be empty").show();
+            txtHost.requestFocus();
+            txtHost.selectAll();
+            return;
+        } else if (!txtPort.getText().matches("\\d+")) {
+            new Alert(Alert.AlertType.ERROR, "Invalid Port").show();
+            txtPort.requestFocus();
+            txtPort.selectAll();
+            return;
+        } else if (txtUsername.getText().trim().isEmpty()) {
+            new Alert(Alert.AlertType.ERROR, "Username can't be empty").show();
+            txtUsername.requestFocus();
+            txtUsername.selectAll();
         }
     }
 }
